# COMPUTERIGS2526

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
BEECROWD/BEGINNER/page01/: a.out
CODEFORCES/0800/: a.out
KELAS10/CODING/2026/0309/: RegressionLinear-Housing.ows  Titanic-Logistic-Regression.ows
KELAS10/CODING/2026/0316/: Titanic-Logistic-Regression.ows
KELAS10/CODING/2026/0420/: package-lock.json  package.json
KELAS10/CODING/2026/0427/: package-lock.json  package.json
KELAS10/CODING/A/0725/: index.html
KELAS10/CODING/A/0801/: index.html
KELAS10/CODING/A/0808/: index.html  pokemon.html  search.html
KELAS10/INFORMATIKA/10-10/: absolute.html
KELAS11/APCS/0127/: index.html
KELAS11/APCS/0729/: data.sqbpro  data.txt
KELAS11/APCS/0805/: data.sqbpro
KELAS11/APCS/0812/: travel.db
KELAS11/ULANG/0816/: travel.db  travel.sqbpro
KELAS12/CODING/B/13-0923/: main.py  models.py  pyproject.toml  requirements.txt  routes.py  run.py  xrun.py
KELAS12/CODING/B/13-0923/app/forms/: __init__.py
KELAS12/CODING/B/13-0923/app/models/: __init__.py
KELAS12/CODING/B/13-0923/app/routes/: __init__.py
KELAS12/CODING/B/13-0923/migrations/versions/: 066cbf1511f4_add_password_on_user.py  d5369a4d4b76_init_db.py  e2ca58b5b8f3_add_students_table.py
KELAS12/CODING/B/13-0923/templates/: login.html
KELAS12/PRE-UNI/0429/: Latihan 29 April.db  Latihan 29 April.sqbpro
OPSI/PCOS/: README.md
OPSI/PCOS/be/: .env.example  package-lock.json  package.json
OPSI/PCOS/iot-pcos/: platformio.ini
(+709 files in other folders)
