[project]
name = "13-0923"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.16.5",
    "blinker==1.9.0",
    "click==8.3.0",
    "flask==3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "greenlet==3.2.4",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.43",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
]
